@@ -74,6 +74,8 @@ MenuBar.Mail.Copy.Label=Copy Message
 MenuBar.Mail.Copy.KeyBinding=C
 MenuBar.Mail.Delete.Label=Delete Message(s)
 MenuBar.Mail.Delete.KeyBinding=D
+MenuBar.Mail.SearchFolder.Label=sEarch Folder
+MenuBar.Mail.SearchFolder.KeyBinding=E
 MenuBar.Mail.Subscribe.Label=suBscribe Folders
 MenuBar.Mail.Subscribe.KeyBinding=B
 
