@@ -1,11 +1,33 @@
 <html>
 <head>
-<title>Incomplete Help</title>
+<title>Searching for messages</title>
 </head>
 <body>
-<p>The help system in Pooka has been added recently, and the actual help
-documents have not yet fully been written.  So while some pages are available,
-this one isn't.  If you'd like to contribute to
-the Pooka documentation, please contact akp@sourceforge.net.</p>
+
+<h1>Searching for messages</h1>
+
+<p>You can use Pooka to search through messages in one or more folders.  
+To bring up the Search Panel, you can either hit <code>F3</code> or <code>/
+</code>, go to Mail->Search Folder, or hit the <img src="images/Binocular.gif">
+Binocular icon on the Folder Toolbar</p>
+
+<img src="images/searchDialog.jpg">
+
+<p>In the Search Dialog, you can specify which folders to search and which
+search to perform.  The upper part of the panel gives you a choice of all of
+the Folders current known by Pooka, with the current folder selected by 
+default.  The bottom panel lets you choose which specific queries you want
+to use in your search.</p>
+
+<p>You can make a more complex query by using the "And" and "Or" buttons
+at the bottom of the Dialog.</p>
+
+<img src="images/searchDialog2.jpg">
+
+<p>Once you have constructed your search, hit 'Ok' execute the query.  A window
+will pop up while Pooka performs the search.  Once it is done, a Search Results
+window will show up with the results of your query.  If no messages match, 
+then the window will be empty.</p>
+
 </body>
 </html>
